plugins {
	id 'java-library'
	id 'eclipse'
	id 'java'
	id 'org.openjfx.javafxplugin' version '0.0.10'
}

repositories {
	mavenCentral()
	maven {
		url "https://libraries.minecraft.net"
	}
}

ext {
	sourceSets.main.java.srcDirs = ['src']
	javaMainClass = 'net.vgc.Main'
}

eclipse {
	jdt {
		sourceCompatibility = '17'
		targetCompatibility = '17'
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

javafx {
	version = "17"
	modules = [ 'javafx.controls' ]
}

compileJava {
	sourceCompatibility = '17'
	targetCompatibility = '17'
}

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + 'Java Runtime:' + System.getProperty("java.runtime.version"))

dependencies {
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
	implementation 'com.google.guava:guava:31.0.1-jre'
	implementation group: 'io.netty', name: 'netty-all', version: '4.1.25.Final'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
	implementation 'com.mojang:datafixerupper:4.0.26'
}

task clientRun(type:JavaExec) {
	group = 'runs'
	main = 'net.vgc.Main'
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	args("--debugMode", "false", "--ide", "--client", "--gameDir", file("run/client"), "--resourceDir", file("src/main/resources/"), "--instantLoading", "true", "--safeLoading", "false")
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task serverRun(type:JavaExec) {
	group = 'runs'
	main = 'net.vgc.Main'
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	args("--debugMode", "false", "--ide", "--server", "--gameDir", file('run/server'), "--resourceDir", file('src/main/resources/'), "--host", "localhost", "--port", "8080")
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task accountServerRun(type:JavaExec) {
	group = 'runs'
	main = 'net.vgc.Main'
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	args("--debugMode", "false", "--ide", "--accountServer", "--gameDir", file('run/account_server'), "--host", "localhost", "--port", "8081")
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task testRun(type:JavaExec) {
	group = 'runs'
	main = 'net.vgc.Test'
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

wrapper {
    gradleVersion = '7.3'
    distributionType = Wrapper.DistributionType.ALL
}

jar {
	manifest {
		attributes([
			'Main-Class': javaMainClass
		])
	}
}
